--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <h1>Humilde!!!!</h1>
-    <p>Teste de PWA</p>
+    <style>
+        #mappia-iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        body, html{
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    
+    <iframe id="mappia-iframe" src="https://maps.csr.ufmg.br/">
+        <p>Your browser does not support iframes.</p>
+    </iframe>
 
     <script>
         if ('serviceWorker' in navigator) {
